objects/Default_Contract_Pricing_Account__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_Planning_Account__c</fullName>
        <label>Capacity Planning Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Crediting_Modeling__c</fullName>
        <label>Commission Crediting &amp; Modeling</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Desk_Account__c</fullName>
        <label>Deal Desk Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FP_A_Account__c</fullName>
        <label>FP&amp;A Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Consolidation_Account__c</fullName>
        <label>Financial Consolidation Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Finance_Account__c</fullName>
        <label>Operational Finance Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Budgeting_Forecasting_Account__c</fullName>
        <label>Planning Budgeting Forecasting Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Account__c</fullName>
        <label>Platform Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPM_Bundle_Account__c</fullName>
        <label>SPM Bundle Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Forecasting_Account__c</fullName>
        <label>Sales Forecasting Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_and_Quota_Account__c</fullName>
        <label>Territory and Quota Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>